force-app/main/default/objects/IVR_Routing_Log__c/IVR_Routing_Log__c.object-meta.xml
<CustomObject>
    <label>IVR Routing Log</label>
    <nameField>
        <displayFormat>IVR-{000000000}</displayFormat>
        <label>IVR Routing Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IVR Routing Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>