force-app/main/default/objects/IVR_Routing_Log__c/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <label>ANI</label>
    <length>60</length>
    <type>Text</type>
</CustomField>