force-app/main/default/objects/IVR_Routing_Log__c/fields/Bot_Review_Skipped__c.field-meta.xml
<CustomField>
    <fullName>Bot_Review_Skipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bot Review Skipped</label>
    <type>Checkbox</type>
</CustomField>