force-app/main/default/objects/IVR_Routing_Log__c/fields/Call_End__c.field-meta.xml
<CustomField>
    <fullName>Call_End__c</fullName>
    <description>Phone call&apos;s end time from Genesys</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call End</label>
    <type>DateTime</type>
</CustomField>