force-app/main/default/objects/IVR_Routing_Log__c/fields/Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording__c</fullName>
    <formula>HYPERLINK(&quot;https://apps.mypurecloud.com/directory/#/engage/admin/interactions/&quot;&amp; ConversationId__c  , &quot;Recording Link&quot;,&quot;_new&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Recording</label>
    <type>Text</type>
</CustomField>