force-app/main/default/objects/IVR_Routing_Log__c/fields/Call_Start__c.field-meta.xml
<CustomField>
    <fullName>Call_Start__c</fullName>
    <description>Phone call&apos;s start time from Genesys</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Start</label>
    <type>DateTime</type>
</CustomField>