force-app/main/default/objects/IVR_Routing_Log__c/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <formula>Text(Case__r.Confirm_Case_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Reason</label>
    <type>Text</type>
</CustomField>