force-app/main/default/objects/IVR_Routing_Log__c/fields/Case_Skill__c.field-meta.xml
<CustomField>
    <fullName>Case_Skill__c</fullName>
    <formula>IF( NOT(ISBLANK(TEXT(Case__r.Class__c))) ,Case__r.Case_Reason_Skill__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Skill</label>
    <type>Text</type>
</CustomField>