force-app/main/default/objects/IVR_Routing_Log__c/fields/Cash_Out_Delinquency__c.field-meta.xml
<CustomField>
    <fullName>Cash_Out_Delinquency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIP Cash Out Delinquency</label>
    <type>Checkbox</type>
</CustomField>