force-app/main/default/objects/IVR_Routing_Log__c/fields/CIP_Account__c.field-meta.xml
<CustomField>
    <fullName>CIP_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CIP Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IVR Routing Logs</relationshipLabel>
    <relationshipName>IVR_Routing_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>