force-app/main/default/objects/IVR_Routing_Log__c/fields/CIP_Auth__c.field-meta.xml
<CustomField>
    <fullName>CIP_Auth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIP Auth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>