force-app/main/default/objects/IVR_Routing_Log__c/fields/CIP_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>CIP_Company_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIP Company Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>