force-app/main/default/objects/IVR_Routing_Log__c/fields/CIP_Company_Tier__c.field-meta.xml
<CustomField>
    <fullName>CIP_Company_Tier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIP Company Tier</label>
    <length>60</length>
    <type>Text</type>
</CustomField>