force-app/main/default/objects/IVR_Routing_Log__c/fields/CIP_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>CIP_Customer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIP Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>