force-app/main/default/objects/IVR_Routing_Log__c/fields/CIP_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>CIP_Queue_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIP Queue Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>