force-app/main/default/objects/IVR_Routing_Log__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>CIP Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>