force-app/main/default/objects/IVR_Routing_Log__c/fields/InQueue_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>InQueue_Queue_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>InQueue Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>