force-app/main/default/objects/IVR_Routing_Log__c/fields/isIVRinPlay__c.field-meta.xml
<CustomField>
    <fullName>isIVRinPlay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isIVRinPlay</label>
    <type>Checkbox</type>
</CustomField>