force-app/main/default/objects/IVR_Routing_Log__c/fields/IVR_Intent_Grouping__c.field-meta.xml
<CustomField>
    <fullName>IVR_Intent_Grouping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IVR Intent Grouping</label>
    <referenceTo>IVR_Intent_Grouping__c</referenceTo>
    <relationshipLabel>IVR Routing Logs (IVR Intent Grouping)</relationshipLabel>
    <relationshipName>IVR_Routing_Logs2</relationshipName>
    <type>Lookup</type>
</CustomField>