force-app/main/default/objects/IVR_Routing_Log__c/fields/Lex_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Lex_Transcript__c</fullName>
    <label>Lex Transcript</label>
    <length>255</length>
    <type>Text</type>
</CustomField>