force-app/main/default/objects/IVR_Routing_Log__c/fields/Previous_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Queue_Name__c</fullName>
    <label>Previous Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>