force-app/main/default/objects/IVR_Routing_Log__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Skill</label>
    <length>50</length>
    <type>Text</type>
</CustomField>