force-app/main/default/objects/IVR_Routing_Log__c/fields/Transferred__c.field-meta.xml
<CustomField>
    <fullName>Transferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transferred?</label>
    <type>Checkbox</type>
</CustomField>