force-app/main/default/objects/IVR_Routing_Log__c/fields/User_Role_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Role Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>