force-app/main/default/objects/IVR_Routing_Log__c/fields/ZP_User_Role_Id__c.field-meta.xml
<CustomField>
    <fullName>ZP_User_Role_Id__c</fullName>
    <label>CIP ZP User Role Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>